fix size and padding of pricing cards on small screens

--- a/styles.css
+++ b/styles.css
@@ -225,5 +225,10 @@ footer {
     p {
      font-size: 0.6rem;
     }
+    
+    #pricing {
+        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+        padding: 20px 50px;
+    }
 
 }
